# ib-lang

./: .prettierignore  Cargo.toml  count_lines.py  docker-compose.yml  notes.md  test.ib
auth-server/: Dockerfile  package-lock.json  package.json
auth-server/src/: index.js
core/: .dockerignore  Cargo.toml  Dockerfile
core/ib_server/: .gitignore  Cargo.toml  local.env
core/ib_server/src/: auth.rs  db.rs  eval.rs  main.rs  sync.rs  ws.rs
core/ibc/: Cargo.toml  test.ib
core/ibc/src/: main.rs
examples/: sum.ib
forwarder/: .gitignore  package-lock.json  package.json  tsconfig.json
forwarder/src/: index.ts  server.ts
ib_server/: Cargo.toml
ib_server/data/G2uKGZZ0AuYPJOIYmULW3ZWCUEW2/: myib.ib
ib_server/src/: auth.rs  main.rs  sync.rs
ibc/: .gitignore  Cargo.toml  test.ib
ibc/src/: lib.rs  main.rs
ide-web/: .env.production  .firebaserc  eslint.config.mjs  package-lock.json  package.json
ide-web/.firebase/: hosting.YnVpbGQ.cache
ide-web/src/: App.css  App.js  App.tsx  App.tsx.old  App.tsx.old.2  config.ts  config.ts.old  editor.ts  index.tsx  theme.ts
landing/: docusaurus.config.ts
landing/docs/: intro.md
lazar_grammars/: package.json
lazar_grammars/src/: ib.grammar  parser.terms.js
lazar_grammars/test/: test.js
lezer_grammars/src/: ib.grammar  parser.js  parser.terms.js
manual_test/: Cargo.toml  lexer_test.ib
manual_test/src/: main.rs
server-tower/: Cargo.toml  Makefile
server-tower/src/: main.rs  main.rs.old
src/: grammar.pest  main.rs
src/analysis/: error_bag.rs  mod.rs  operator.rs  parser.rs
src/eval/: evaluator.rs
(+84 files in other folders)
