[package]
name = "ib_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.7.5", features = ["ws"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
ibc = { path = "../ibc" }
reqwest = { version = "0.12.9", features = ["json"] }
rusqlite = "0.32.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["cors"] }
